# Cpp-exercises

lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  Dwojkowy.cpp  main.cpp
lab1/factorial/: CMakeLists.txt  Factorial.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  Show.cpp  Show.h  main.cpp
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: CMakeLists.txt  ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  TreeIterators.h  main.cpp
lab2/: CMakeLists.txt
lab2/array2D/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  (+1 more)
lab4/: CMakeLists.txt
lab4/netstemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab7/: CMakeLists.txt
(+75 files in other folders)
